# RetoSquadMakers

./: .dockerignore  Dockerfile  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: developer_test.yml
core/: exceptions.py
data_access/: database.py  repositories.py
retosquadmakers/: Dockerfile  main.py  settings.py
retosquadmakers/core/: schemas.py
retosquadmakers/data_access/: database.py  models.py  repositories.py
retosquadmakers/services/joke/: __init__.py  enums.py  repositories.py  routes.py  schemas.py  service.py
retosquadmakers/services/joke/tests/: test_joke.py
retosquadmakers/services/maths/: __init__.py  routes.py  service.py
services/joke/: __init__.py  routes.py
services/joke/tests/: test_joke.py
services/maths/: __init__.py  routes.py
services/maths/tests/: test_math.py
tests/: conftest.py
tests/api/: test_joke.py
