[tool.poetry]
name = "retosquadmakers"
version = "0.1.0"
description = ""
authors = ["Arian Ventura Rodríguez <arianventura94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
python-multipart = "^0.0.5"
httpx = "^0.23.1"
databases = "^0.6.2"
asyncpg = "^0.27.0"
psycopg2 = "^2.9.5"
ujson = "^5.6.0"
uvicorn = "^0.20.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
trio = "^0.22.0"
coverage = "^6.5.0"


[tool.poetry.group.style.dependencies]
mypy = "^0.991"
pylint = "^2.15.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
